recursion.cons.occurrences.Occurrences.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
  if (l==Nil) {
    return false
  } else {
    if (l.head==v) {
      return true
    } else {
      return isMember(l.tail,v)
    }
  }
}


def occurrences(l:List[Int], v:Int): Int = {
  if (!estMembre(l,v)) {
    return 0
  } else {
    return 1+occurences(l.tail,v)
  }
}


